--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="https://github.com/imanol-um/Proyecto_Programacion_Web_1">Repositorio</a></li>
-                    <li><a href="index.html">Articulos</a></li>
+                    <li><a href="index.html">Artículos</a></li>
                 </ul>
 
             </nav>
@@ -38,11 +38,11 @@
                 <article>
                     <h1>¡Bienvenidos a mascotitas!</h1>
                     <br>
-                    <h2>La Pagina web de nuestro proyecto de Programación web 1.</h2>
+                    <h2>La Página web de nuestro proyecto de Programación web 1.</h2>
                     <br>
                     <h3>La cual va dedicada a nuestras mascotitas queridas.</h3>
                     <br>
-                    <h3>Esta pagina fue elaborada por los integrantes:</h3>
+                    <h3>Esta página fue elaborada por los integrantes:</h3>
                     <br>
                     <p>
                     <ul>
@@ -165,15 +165,15 @@
     <footer class="pie letra">
         <section id="redes-s">
             <h3 class="h3">Autores:</h3>
-            <div class="Repositorio"> <a href="https://github.com/imanol-um">Ian Imanol Uribe Montoya</a></div>
-            <div class="Repositorio"> <a href="https://github.com/victordelangelss">Victor del Angel Sánchez Sánchez</a></div>
-            <div class="Repositorio"> <a href="https://github.com/ikneel">Luis Enrique Espitia Naves</a></div>
-            <div class="Repositorio"> <a href="https://github.com/AnaKR10">Ana Karen Reyes Cicilia</a></div>
-            <div class="Repositorio"> <a href="https://github.com/AlexKarashi">Iván Alexander Ramirez Martinez</a></div>
+            <div class="Repositorio"> <a href="https://github.com/imanol-um">Ian Imanol Uribe Montoya - imanol-um</a></div>
+            <div class="Repositorio"> <a href="https://github.com/victordelangelss">Victor del Angel Sánchez Sánchez - victordelangelss</a></div>
+            <div class="Repositorio"> <a href="https://github.com/ikneel">Luis Enrique Espitia Naves - ikneel</a></div>
+            <div class="Repositorio"> <a href="https://github.com/AnaKR10">Ana Karen Reyes Cicilia AnaKR10</a></div>
+            <div class="Repositorio"> <a href="https://github.com/AlexKarashi">Iván Alexander Ramirez Martinez AlexKarashi</a></div>
         </section>
         <section id="profe">
             <h3 class="h3">Profesor:</h3>
-            <div class="Repositorio"> <a href="https://github.com/AaronVelasco93">Aaron Velasco Agustin</a></div>
+            <div class="Repositorio"> <a href="https://github.com/AaronVelasco93">Aaron Velasco Agustin - AaronVelasco93</a></div>
         </section>
 
         <section id="derechos">
