--- a/mascotas.html
+++ b/mascotas.html
@@ -19,13 +19,14 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="index.html">Blog</a></li>
-                    <li><a href="index.html">Articulos</a></li>
+                    <li><a href="https://github.com/imanol-um/Proyecto_Programacion_Web_1">Repositorio</a></li>
+                    <li><a href="index.html">Artículos</a></li>
                 </ul>
 
             </nav>
         </div>
     </header>
+
     <table align="center" class="tabla">
         <tr class="tr">
             <section>
@@ -144,18 +145,19 @@
             </section>
         </tr>
     </table>
+
     <footer class="pie letra">
         <section id="redes-s">
             <h3 class="h3">Autores:</h3>
-            <div class="Repositorio"> <a href="https://github.com/imanol-um">Ian Imanol Uribe Montoya</a></div>
-            <div class="Repositorio"> <a href="https://github.com/victordelangelss">Victor del Angel Sánchez Sánchez</a></div>
-            <div class="Repositorio"> <a href="https://github.com/ikneel">Luis Enrique Espitia Naves</a></div>
-            <div class="Repositorio"> <a href="https://github.com/AnaKR10">Ana Karen Reyes Cicilia</a></div>
-            <div class="Repositorio"> <a href="https://github.com/AlexKarashi">Iván Alexander Ramirez Martinez</a></div>
+            <div class="Repositorios"> <a href="https://github.com/imanol-um">Ian Imanol Uribe Montoya - imanol-um</a></div>
+            <div class="Repositorios"> <a href="https://github.com/ikneel">Luis Enrique Espitia Naves - ikneel</a></div>
+            <div class="Repositorios"> <a href="https://github.com/AnaKR10">Ana Karen Reyes Cicilia - AnaKR10</a></div>
+            <div class="Repositorios"> <a href="https://github.com/AlexKarashi">Iván Alexander Ramirez Martinez - AlexKarashi</a></div>
+            <div class="Repositorios"> <a href="https://github.com/victordelangelss">Victor del Angel Sánchez Sánchez - victordelangelss </a></div>
         </section>
         <section id="profe">
             <h3 class="h3">Profesor:</h3>
-            <div class="Repositorio"> <a href="https://github.com/AaronVelasco93">Aaron Velasco Agustin</a></div>
+            <div class="Repositorios"> <a href="https://github.com/AaronVelasco93">Aaron Velasco Agustin - AaronVelasco93</a></div>
         </section>
 
         <section id="derechos">
